Patch by Adrian Panasiuk: fix broken TRACE macro definitions (ticket #3133). Thanks!

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28656 a95241bf-73f2-0310-859d-f6bbb57e9c96